--- a/leaflet/leaflet-liteserv.html
+++ b/leaflet/leaflet-liteserv.html
@@ -6,13 +6,13 @@
 
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
-    <link rel="stylesheet" href="/leaflet/leaflet.css" />
+    <link rel="stylesheet" href="/inc/leaflet.css" />
     <!--[if lte IE 8]><link rel="stylesheet" href="../dist/leaflet.ie.css" /><![endif]-->
 </head>
 <body>
     <div id="map" style="width: 600px; height: 400px"></div>
 
-    <script src="/leaflet/leaflet.js"></script>
+    <script src="/inc/leaflet.js"></script>
     <script>
         var map = L.map('map').setView([55, -5], 5)
 
