--- a/leaflet/leaflet-tiles.html
+++ b/leaflet/leaflet-tiles.html
@@ -6,12 +6,12 @@
 
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 
-	<link rel="stylesheet" href="/leaflet/leaflet.css" />
+	<link rel="stylesheet" href="/inc/leaflet.css" />
 </head>
 <body>
 	<div id="map" style="width: 600px; height: 400px"></div>
 
-	<script src="/leaflet/leaflet.js"></script>
+	<script src="/inc/leaflet.js"></script>
 	<script>
 
 		var map = L.map('map').setView([57, -5], 10);
